Starting to come together :)

--- a/assets/templates/default/layout.jade
+++ b/assets/templates/default/layout.jade
@@ -2,7 +2,8 @@
 html
     head
         title #{title}
-    
+        
+        link(rel='stylesheet', href='#{clientpath}deckem.css')
     body
         !{deck}
    
