Added callback function in action call to prevent ncp error

--- a/assets/templates/default/layout.jade
+++ b/assets/templates/default/layout.jade
@@ -6,4 +6,6 @@ html
         link(rel='stylesheet', href='#{clientpath}deckem.css')
     body
         !{deck}
+        
+        script(src='#{clientpath}deckem.js')
    
