--- a/src/deckem.css
+++ b/src/deckem.css
@@ -1,1 +1,5 @@
 /*= deck.js!core/deck.core.css */
+/*= deck.js!themes/style/swiss.css */
+/*= deck.js!themes/transition/horizontal-slide.css */
+/*= deckmirror!deck.codemirror.css */
+/*= deckmirror!themes/default.css */
