--- a/test/testdeck/main.jade
+++ b/test/testdeck/main.jade
@@ -1,2 +1,17 @@
 .slide
     h1 A Test Slide
+    
+.slide
+    h2 Another Slide
+    
+    p This a slide with some sub-slides.
+    
+    ul
+        li.slide Like this one
+        li.slide And this one
+    
+.slide
+    h2 Some Example Code
+    
+    textarea.code(mode='javascript',runnable='true')
+        console.log('hello');
