--- a/test/testdeck/main.jade
+++ b/test/testdeck/main.jade
@@ -1,10 +1,13 @@
 .slide
-    h1 A Test Slide
+    h1 Welcome to Deck'em
     
 .slide
-    h2 Another Slide
+    h2 What is Deck'em
     
-    p This a slide with some sub-slides.
+    p 
+        :markdown
+            Deck'em is a tool designed to make creating and
+            maintaining a [deck.js](https://github.com/imakewebthings/deck.js) presentation simpler
     
     ul
         li.slide Like this one
