Updated doco deck

--- a/deck.jade
+++ b/deck.jade
@@ -1,5 +1,7 @@
 .slide
-    h1 Welcome to Deck'em
+    hgroup
+        h1 Deck'em
+        h2 deck.js slides built with Jade
     
 .slide
     h2 What is Deck'em
@@ -28,6 +30,11 @@
                 to use [Markdown](http://daringfireball.net/projects/markdown/) in your slides.
                 
                 You simply need to install a suitable node markdown package, such as `markdown` or `rdiscount`.
+            
+.slide
+    h2 More Examples
+    
+    p This is a test
     
 .slide
     h2 Some Example Code
