--- a/src/deckem.css
+++ b/src/deckem.css
@@ -1,6 +1,7 @@
 /*= deck.js!core/deck.core.css */
 /*= deck.js!extensions/hash/deck.hash.css */
 /*= deck.js!extensions/status/deck.status.css */
+/*= deck.js!extensions/scale/deck.scale.css */
 /*= deck.js!themes/style/swiss.css */
 /*= deck.js!themes/transition/horizontal-slide.css */
 /*= deckmirror!deck.codemirror.css */
