--- a/deckem.css
+++ b/deckem.css
@@ -424,6 +424,24 @@ body.deck-container {
 }
 
 
+.csstransforms .deck-container.deck-scale {
+  width: auto;
+  -webkit-transform-origin: 50% 0;
+  -moz-transform-origin: 50% 0;
+  -o-transform-origin: 50% 0;
+  -ms-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+}
+.csstransforms .deck-container.deck-scale.deck-menu {
+  width: 70%;
+  -webkit-transform: none !important;
+  -moz-transform: none !important;
+  -o-transform: none !important;
+  -ms-transform: none !important;
+  transform: none !important;
+}
+
+
 .deck-container {
   font-family: "Helvetica Neue", sans-serif;
   font-size: 1.25em;
