--- a/assets/templates/default/layout.jade
+++ b/assets/templates/default/layout.jade
@@ -5,7 +5,7 @@ html
         
         link(rel='stylesheet', href='#{clientpath}deckem.css')
         link(rel='stylesheet', href='#{clientpath}stage.css')
-        link(rel='stylesheet', href='#{clientpath}themes/default.css')
+        link(rel='stylesheet', href='#{clientpath}themes/#{theme}.css')
         link(rel='stylesheet', href='#{clientpath}custom.css')
     body
         div.sp-screen
