Building with custom deck.js version (removes iframe hacks). Bump version

--- a/assets/templates/default/layout.jade
+++ b/assets/templates/default/layout.jade
@@ -4,7 +4,7 @@ html
         title #{title}
         
         link(rel='stylesheet', href='#{clientpath}deckem.css')
-        link(rel='stylesheet', href='#{clientpath}stage.css')
+        // link(rel='stylesheet', href='#{clientpath}stage.css')
         link(rel='stylesheet', href='#{clientpath}themes/#{theme}.css')
         link(rel='stylesheet', href='#{clientpath}custom.css')
     body
