--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -1,5 +1,5 @@
 /*= deck.js!themes/style/swiss.css */
-/*= deckmirror!themes/default.css */
+/* deckmirror!themes/default.css */
 
 body {
     background: black;
