--- a/src/themes/neon.css
+++ b/src/themes/neon.css
@@ -1,5 +1,5 @@
 /*= deck.js!themes/style/neon.css */
-/*= deckmirror!themes/night.css */
+/* deckmirror!themes/night.css */
 
 body {
     background: black;
