--- a/assets/client/deckem.css
+++ b/assets/client/deckem.css
@@ -524,3 +524,13 @@ body {
 .slide aside {
     display: none;
 }
+
+.slide iframe.code {
+    width: 100%;
+    height: 400px;
+    -webkit-border-radius: 10px;
+}
+
+iframe.slide {
+    padding: 0px !important;
+}
