--- a/src/deckem.css
+++ b/src/deckem.css
@@ -21,3 +21,13 @@ body {
 .slide aside {
     display: none;
 }
+
+.slide iframe.code {
+    width: 100%;
+    height: 400px;
+    -webkit-border-radius: 10px;
+}
+
+iframe.slide {
+    padding: 0px !important;
+}
