Added sockets plugin, which bridges eve -> socket.io

--- a/assets/templates/default/layout.jade
+++ b/assets/templates/default/layout.jade
@@ -28,8 +28,8 @@ html
         
         script(src='#{clientpath}deckem.js')
 
-        - plugins.forEach(function(plugin) {
-          script(src='#{clientpath}deckem-#{plugin}.js')
+        - scripts.forEach(function(pluginScript) {
+          script= pluginScript
         - })
         
         script(src='#{clientpath}bridge-#{bridge}.js')
