--- a/src/themes/neon.css
+++ b/src/themes/neon.css
@@ -1,20 +1,2 @@
 /*= deck.js!themes/style/neon.css */
-/* deckmirror!themes/night.css */
-
-body {
-    background: black;
-}
-
-.sp-screen {
-    background: #555;
-}
-
-.sp-floor {
-    background: #333;
-    border-bottom: 1px solid #bbb;
-    border-top: 1px solid #444;
-}
-
-.sp-audience {
-    background: #888;
-}
+/*= template/stage.css */
