--- a/assets/client/themes/vintage.css
+++ b/assets/client/themes/vintage.css
@@ -53,8 +53,10 @@
   color: #fff;
 }
 .deck-container a {
-  color: #4B5846;
+  color: #5B1C0D;
   text-decoration: none;
+  font-weight: 500;
+  text-shadow: #bbb 0 1px 2px;
 }
 .deck-container a:hover, .deck-container a:focus {
   text-decoration: underline;
@@ -97,11 +99,6 @@
     content:"";
     position:absolute; 
     z-index:-2;
-}
-
-.drop-shadow p {
-    font-size:16px;
-    font-weight:bold;
 }
 
 /* Lifted corners */
@@ -274,19 +271,10 @@
 
 
 body {
-    background: black;
-}
-
-.sp-screen {
-    background: #C3BA81;
-}
-
-.sp-floor {
-    background: #90A5B6;
-    border-bottom: 1px solid #bbb;
-    border-top: 1px solid #444;
-}
-
-.sp-audience {
-    background: #888;
+    background-color:#f5e5bd;
+    background-image: -moz-radial-gradient(50% 0%, ellipse farthest-corner, #f5e5bd, #B68D3D 100%);
+    background-image: -webkit-radial-gradient(50% 0%, ellipse farthest-corner, #f5e5bd, #B68D3D 100%);
+    background-image: -o-radial-gradient(50% 0%, ellipse farthest-corner, #f5e5bd, #B68D3D 100%);
+    background-image: -ms-radial-gradient(50% 0%, ellipse farthest-corner, #f5e5bd, #B68D3D 100%);
+    background-image: radial-gradient(50% 0%, ellipse farthest-corner, #f5e5bd, #B68D3D 100%);
 }
