--- a/src/deckem.css
+++ b/src/deckem.css
@@ -2,6 +2,7 @@
 /*= deck.js!extensions/hash/deck.hash.css */
 /*= deck.js!extensions/status/deck.status.css */
 /*= deck.js!themes/transition/horizontal-slide.css */
+/*= deps/prettify.css */
 /* deckmirror!deck.codemirror.css */
 
 html {
@@ -10,23 +11,68 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
+    height: 96%;
     margin: 0;
+    padding: 1% 0;
+    overflow: hidden;
 }
 
-.sp-screen {
+body.fullwidth, body.speakermode {
     height: 100%;
+    padding: 0;
+}
+
+.deckem.drop-shadow {
+    margin: 0 auto;
+    padding: 0;
+    height: 100%;
+    width: 70%;
+}
+
+body.fullwidth .deckem.drop-shadow, body.speakermode .deckem.drop-shadow {
+    width: 100%;
+}
+
+.deckem .deck-container {
+    width: 100%;
+    padding: 0;
 }
 
 .slide aside {
     display: none;
 }
 
-.slide iframe {
-    width: 100%;
-    height: 400px;
+body.speakermode .slide h1 {
+    font-size: 1.4em;
+    position: relative;
+    margin: 1em;
 }
 
-iframe.slide {
+body.speakermode .slide aside {
+    display: block;
+}
+
+.slide.flex iframe {
+    width: 100%;
+    -webkit-box-flex: 1;
+}
+
+iframe.slide, img.slide {
     padding: 0px !important;
+}
+
+.lifted iframe, .lifted img {
+    -webkit-border-radius: 4px;
+}
+
+.slide.flex {
+    display: block;
+    display: -webkit-box;
+    
+    -webkit-box-orient: vertical;
+}
+
+.slide.flex .autoheight {
+    display: -webkit-box;
+    -webkit-box-flex: 1;
 }
