--- a/src/themes-less/vintage.less
+++ b/src/themes-less/vintage.less
@@ -59,8 +59,10 @@
     ::selection { background:#c00; color:#fff; }
     
     a {
-        color:#4B5846;
+        color:#5B1C0D;
         text-decoration:none;
+        font-weight: 500;
+        text-shadow: #bbb 0 1px 2px;
         
         &:hover, &:focus {
             text-decoration:underline;
