--- a/test/themes/default.css
+++ b/test/themes/default.css
@@ -6,51 +6,51 @@
 .deck-container .slide {
   background: #fff;
 }
-.deck-container .slide h1 {
+.deck-container h1 {
   color: #000;
 }
-.deck-container .slide h2 {
+.deck-container h2 {
   color: #c00;
   border-bottom-color: #ccc;
 }
-.deck-container .slide h3 {
+.deck-container h3 {
   color: #888;
 }
-.deck-container .slide pre {
+.deck-container pre {
   border-color: #ccc;
 }
-.deck-container .slide code {
+.deck-container code {
   color: #888;
 }
-.deck-container .slide blockquote {
+.deck-container blockquote {
   font-size: 2em;
   font-style: italic;
   padding: 1em 2em;
   color: #000;
   border-left: 5px solid #ccc;
 }
-.deck-container .slide blockquote p {
+.deck-container blockquote p {
   margin: 0;
 }
-.deck-container .slide blockquote cite {
+.deck-container blockquote cite {
   font-size: .5em;
   font-style: normal;
   font-weight: bold;
   color: #888;
 }
-.deck-container .slide ::-moz-selection {
+.deck-container ::-moz-selection {
   background: #c00;
   color: #fff;
 }
-.deck-container .slide ::selection {
+.deck-container ::selection {
   background: #c00;
   color: #fff;
 }
-.deck-container .slide a, .deck-container .slide a:hover, .deck-container .slide a:focus, .deck-container .slide a:active, .deck-container .slide a:visited {
+.deck-container a, .deck-container a:hover, .deck-container a:focus, .deck-container a:active, .deck-container a:visited {
   color: #c00;
   text-decoration: none;
 }
-.deck-container .slide a:hover, .deck-container .slide a:focus {
+.deck-container a:hover, .deck-container a:focus {
   text-decoration: underline;
 }
 .deck-container .deck-prev-link, .deck-container .deck-next-link {
